// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-src-paths build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:4000/runtime-014340d9b9907db3205b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/vendors~skuDefaultClientEntry-f320ad30fcbd0c053d0a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/skuDefaultClientEntry-05b78e015ee823f13484.js\\"></script>
    
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:4000/runtime-014340d9b9907db3205b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/vendors~skuDefaultClientEntry-f320ad30fcbd0c053d0a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/skuDefaultClientEntry-05b78e015ee823f13484.js\\"></script>
    </body>
  </html>
",
  "warnings": Array [],
}
`;

exports[`custom-src-paths build should generate the expected files 1`] = `
Object {
  "production/au/index.html": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"http://localhost:4000/runtime-014340d9b9907db3205b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/vendors~skuDefaultClientEntry-f320ad30fcbd0c053d0a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4000/skuDefaultClientEntry-05b78e015ee823f13484.js\\"></script>
    </body>
  </html>
",
  "runtime-014340d9b9907db3205b.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "skuDefaultClientEntry-05b78e015ee823f13484.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~skuDefaultClientEntry-f320ad30fcbd0c053d0a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"/runtime-3d179b241d850712e66b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~skuDefaultClientEntry-d5f69e232efb0f0b11bf.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/skuDefaultClientEntry-dae07dc9b7427a1d5a2e.js\\"></script>
    
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"/runtime-3d179b241d850712e66b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~skuDefaultClientEntry-d5f69e232efb0f0b11bf.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/skuDefaultClientEntry-dae07dc9b7427a1d5a2e.js\\"></script>
    </body>
  </html>
",
  "warnings": Array [],
}
`;
